feat: add group api
